correction contraste seo

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(0, 0, 0, 1);
 }
 
 .d-bloc .a-btn:hover,
@@ -728,9 +728,6 @@ h1 {
     color: #333333!important;
 }
 
-h4 {
-    color: #333333!important;
-}
 
 .icons {
     margin-bottom: 14px;
@@ -738,7 +735,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .portfolio-thumb {
@@ -776,7 +773,8 @@ h4 {
     background: rgba(172, 80, 38, .5);
 }
 
-.tc-white {
+.tc-white { 
+    background: rgba(172,80,38,.5);
     color: #fff;
 }
 
